Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignNumberBoolean.quorum
class Main
    action Main
        boolean v = true
        Test(v)
    end

    action Test(number var)
    end
end
